--- a/RogueCloudResources/src/com/roguecloud/resources/index.html
+++ b/RogueCloudResources/src/com/roguecloud/resources/index.html
@@ -86,7 +86,7 @@ body.presenter {
 }
 
 .presenter .player-actions {
-    background-color: #6F9970;
+    background-color: rgb(174, 223, 101);
     height: 80%;
     width: 80%;
 }
