--- a/RogueCloudResources/src/com/roguecloud/resources/index-server.html
+++ b/RogueCloudResources/src/com/roguecloud/resources/index-server.html
@@ -86,13 +86,13 @@ body.presenter {
 }
 
 .presenter .player-actions {
-    background-color: #6F9970;
+    background-color: rgb(174, 223, 101);
     height: 80%;
     width: 40%;
 }
 
 .presenter .world-map {
-    background-color: #349D3D;
+    background-color: rgb(174, 223, 101);
     height: 80%;
     width: 40%; 
 }
