--- a/RogueCloudResources/src/com/roguecloud/resources/index-server.html
+++ b/RogueCloudResources/src/com/roguecloud/resources/index-server.html
@@ -258,10 +258,21 @@ body.presenter {
 	    <a href='database/round/recent' target="_blank">Current Leaderboard Results</a>
     </span>
 	    	
-	    <div id="logo" style="position:absolute; bottom:0; left: 20px; font-family: sans-serif; ">
+	    <div id="logo" style="position:absolute; bottom:0; left: 20px; font-family: sans-serif;">
 	    	Powered by<br/>
-	    	<a href="https://microclimate-dev2ops.github.io/"><img src="resources/logo.svg" width="70%" style="border-style: none"></a>
-	    	<br/><br/><br/>
+	    	<a href="https://microclimate-dev2ops.github.io/"><img src="resources/logo.svg" width="70%" style="border-style: none"></a><br/>
+	    	<!-- 
+	    	<br/>
+	    	<table border="0">
+	    	<tr>
+	    	<td valign="middle"><img src="resources/ibm-cloud-logo-white.svg" style="height: 2em;"></td>
+	    	<td valign="middle"><span style="font-size: 2em; font-family: sans-serif;">&nbsp;&nbsp;IBM Cloud</span></td>
+	    	</tr>
+	    	</table>
+	    	<br/>
+	    	<img src ="resources/liberty-logo.svg" style="height: 3em;"><br/>
+	    	 -->   	
+	    	<br/><br/>
 	    </div>
     </div>
     <div class="events-console" id="events-console-id">
